# llm-guard-proxy

./: .gitignore  Cargo.toml  README.md  justfile  lefthook.yml
.github/workflows/: ci.yml
crates/llm-guard-proxy/: Cargo.toml
crates/llm-guard-proxy-core/: Cargo.toml
crates/llm-guard-proxy-core/src/: context_rot.rs  embedding.rs  family.rs  guard.rs  gwp.rs  lib.rs  loop_detector.rs  model_alias.rs  model_judge.rs  profile.rs  replay.rs  risk_combiner.rs  workflow.rs
crates/llm-guard-proxy-core/src/evidence/: error.rs  mod.rs  model.rs  redaction.rs  store.rs  tests.rs
crates/llm-guard-proxy-core/src/observability/: error.rs  metrics_accumulator.rs  mod.rs  model.rs  redaction.rs  store.rs  tests.rs
crates/llm-guard-proxy-core/src/settings/: error.rs  mod.rs  model.rs  parse.rs  reload.rs  tests.rs
crates/llm-guard-proxy-core/src/settings/tests/: endpoint_reload.rs  profile_policy.rs
crates/llm-guard-proxy-core/tests/: loop_detector_fixtures.rs
crates/llm-guard-proxy-core/tests/fixtures/loop_detector/: README.md  clean_negatives_00.json  clean_negatives_01.json  clean_negatives_02.json  clean_negatives_03.json  clean_negatives_04.json  hard_positives_00.json  hard_positives_01.json  hard_positives_02.json  hard_positives_03.json  hard_positives_04.json  hard_positives_05.json  hard_positives_06.json  hard_positives_07.json  index.json  mild_positives_00.json  mild_positives_01.json  mild_positives_02.json  mild_positives_03.json  mild_positives_04.json
crates/llm-guard-proxy-host-guardian/: Cargo.toml
crates/llm-guard-proxy-host-guardian/src/: config.rs  emergency.rs  escalation.rs  hot_reload.rs  lib.rs  monitor.rs
crates/llm-guard-proxy-host-guardian/src/monitor/tests/: target_reconciliation.rs
crates/llm-guard-proxy-host-guardian/tests/: guardian_tests.rs  no_alloc.rs
crates/llm-guard-proxy-host-telemetry/: Cargo.toml
crates/llm-guard-proxy-host-telemetry/src/: config.rs  lib.rs  linux.rs  model.rs  policy.rs  store.rs  stub.rs
crates/llm-guard-proxy-state/: Cargo.toml
crates/llm-guard-proxy-state/src/: budget.rs  config_paths.rs  lib.rs
crates/llm-guard-proxy-state/src/evidence/: error.rs  model.rs  store.rs  tests.rs
crates/llm-guard-proxy-state/src/observability/: error.rs  ids.rs  live_registry.rs  metrics_accumulator.rs  mod.rs  model.rs  store.rs  tests.rs
crates/llm-guard-proxy/src/: config_reload.rs  embedding_backend.rs  main.rs  model_judge.rs  proxy.rs  replay_calibrate.rs  workflow_cgroup.rs  workflow_execution.rs  workflow_process.rs  workflow_runtime.rs
crates/llm-guard-proxy/src/proxy/: buffered_adapter.rs  deepinfra_rerank_adapter.rs  model_metadata.rs  persistence_flush_tests.rs  recovery.rs  reranker_protocol.rs  score_adapter.rs  shielded_chat.rs  tests.rs  upstream_failover.rs  watchdog_progress.rs  workflow_admission_tests.rs
crates/llm-guard-proxy/src/proxy/deepinfra_rerank_adapter/: tests.rs
crates/llm-guard-proxy/src/proxy/score_adapter/: request.rs  tests.rs
crates/llm-guard-proxy/src/proxy/shielded_chat/: loop_guard.rs
crates/llm-guard-proxy/src/proxy/tests/: adapter_response_fixtures.rs  cot_salvage_issue_211.rs  deepinfra_rerank_endpoint.rs  listener_profile_policy.rs  score_endpoint.rs  shielded_endpoint_rendering.rs  stuck_watchdog_lifecycle.rs  stuck_watchdog_terminalization.rs  upstream_failover.rs  watchdog_sse_event_framing.rs  watchdog_sse_fast_path_dispatch.rs  watchdog_sse_fast_path_lifecycle.rs  watchdog_sse_fast_path_line_endings.rs  watchdog_sse_fast_path_residual.rs
crates/llm-guard-proxy/src/proxy/tests/score_endpoint/: upstream_errors.rs
crates/llm-guard-proxy/src/proxy/tests/upstream_failover/: credential_boundary.rs  models_attempt_preservation.rs  response_and_recovery.rs  shielded_attempt_continuity.rs
crates/llm-guard-proxy/src/workflow_process/: deferred_reaper.rs  drain.rs  execution_lease_tests.rs  isolated_reaper_tests.rs  lifecycle_tests.rs  moved_pgid_tests.rs  pipe_io.rs  pipe_io_tests.rs  signal_authority.rs  signal_authority_tests.rs  startup_authority_tests.rs  startup_guard.rs  test_raii.rs  test_support.rs  tests.rs
crates/llm-guard-proxy/src/workflow_runtime/: deadline_tests.rs
crates/llm-guard-proxy/tests/: embedding_backend.rs  model_judge.rs  replay_calibrate.rs
deploy/gb10/: README.md  config.toml  cutover-guardian.sh  llm-guard-proxy.service  memory-guardian.toml
docs/: architecture.md
examples/guards/: README.md  harmful_content_guard.py
examples/workflows/: README.md  child_safe_general.py
scripts/: smoke-gb10.sh
scripts/hooks/: branch-protection.sh  review-check.sh
tests/: test_gb10_guardian_cutover.py  test_local_gate_contract.py  test_msrv_contract.py
