[workspace]
members = [
    "crates/llm-guard-proxy",
    "crates/llm-guard-proxy-core",
    "crates/llm-guard-proxy-state",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/RyderFreeman4Logos/llm-guard-proxy"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
