[package]
name = "llm-guard-proxy-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for llm-guard-proxy."

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
