[package]
name = "llm-guard-proxy-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for llm-guard-proxy."

[features]
default = []
guard = ["dep:nix"]

[dependencies]
nix = { version = "0.29", features = ["signal", "process"], optional = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[lints]
workspace = true
