[package]
name = "llm-guard-proxy-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for llm-guard-proxy."

[features]
default = ["upstream-hot-restart", "param-override"]
upstream-hot-restart = []
param-override = []
guard = []
family = ["guard"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[lints]
workspace = true
