[package]
name = "llm-guard-proxy-host-guardian"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GB10 host-memory emergency guardian for llm-guard-proxy."

[dependencies]
notify = { version = "8.2", default-features = false }
nix = { version = "0.29", features = ["fs", "user"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
toml = "0.8"

[lints]
workspace = true
