[package]
name = "llm-guard-proxy-host-telemetry"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded observer-only GB10 host telemetry for llm-guard-proxy."

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "time"] }
toml = "0.8"

[lints]
workspace = true
