[package]
name = "llm-guard-proxy-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operational state and persistence for llm-guard-proxy."

[features]
default = []
guard = []

[dependencies]
fs2 = "0.4.3"
llm-guard-proxy-core = { path = "../llm-guard-proxy-core", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
