[package]
name = "llm-guard-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible LLM guard proxy service."

[features]
default = ["upstream-hot-restart", "param-override"]
upstream-hot-restart = ["llm-guard-proxy-core/upstream-hot-restart"]
param-override = ["llm-guard-proxy-core/param-override"]
guard = ["llm-guard-proxy-core/guard", "llm-guard-proxy-state/guard"]

[dependencies]
axum = "0.8"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lexical-core = { version = "1", default-features = false, features = ["parse-floats"] }
llm-guard-proxy-core = { path = "../llm-guard-proxy-core", default-features = false }
llm-guard-proxy-state = { path = "../llm-guard-proxy-state", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[lints]
workspace = true
